--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,12 +29,12 @@ jobs:
         arch:
           - x64
     steps:
-      - uses: actions/checkout@latest
+      - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@latest
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
-      - uses: actions/cache@latest
+      - uses: actions/cache@v4
         env:
           cache-name: cache-artifacts
         with:
@@ -48,7 +48,7 @@ jobs:
       - uses: julia-actions/julia-runtest@latest
       - uses: julia-actions/julia-processcoverage@latest
       - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@latest
+        uses: codecov/codecov-action@v5
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
