--- a/Project.toml
+++ b/Project.toml
@@ -12,3 +12,6 @@ JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 Bcube = "0.2"
 HDF5 = "0.17"
 JLD2 = "0.5"
+
+[sources]
+Bcube = {url = "https://github.com/bcube-project/Bcube.jl", rev = "0.2"}
