--- a/test/Project.toml
+++ b/test/Project.toml
@@ -2,3 +2,6 @@
 Bcube = "cf06320b-b7f3-4748-8003-81a6b6979792"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 BcubeCGNS = "f7a61acb-f482-4505-b2eb-e9cadd76b6b4"
+
+[sources]
+Bcube = {url = "https://github.com/bcube-project/Bcube.jl", rev = "0.2"}
