--- a/.github/workflows/format_check.yml
+++ b/.github/workflows/format_check.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           version: ${{ matrix.julia-version }}
 
-      - uses: actions/checkout@latest
+      - uses: actions/checkout@v4
       - name: Install JuliaFormatter and format
         # This will use the latest version by default but you can set the version like so:
         #
