--- a/Project.toml
+++ b/Project.toml
@@ -8,10 +8,11 @@ Bcube = "cf06320b-b7f3-4748-8003-81a6b6979792"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 
+[sources.Bcube]
+rev = "0.2"
+url = "https://github.com/bcube-project/Bcube.jl"
+
 [compat]
-Bcube = "0.2"
+Bcube = "0.2, 0.1"
 HDF5 = "0.17"
 JLD2 = "0.5"
-
-[sources]
-Bcube = {url = "https://github.com/bcube-project/Bcube.jl", rev = "0.2"}
