--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,13 +23,15 @@ jobs:
     strategy:
       matrix:
         version:
-          - '1.11'
+          - '1.12'
         os:
           - ubuntu-latest
         arch:
           - x64
     steps:
       - uses: actions/checkout@v6
+        with:
+          lfs: true
       - uses: julia-actions/setup-julia@latest
         with:
           version: ${{ matrix.version }}
